@@ -47,7 +47,7 @@ ul.toc {list-style: none}
 
 <dl compact="compact">
 <dt>item <dl compact="compact">
-<dt>@asis in nested table item</dt>
+<dt>in nested table item</dt>
 <dd><p>   in nested table line
    </p></dd>
 </dl></dt>
@@ -60,7 +60,7 @@ ul.toc {list-style: none}
 <p><code>
 </code></p><dl compact="compact">
 <dt>item <dl compact="compact">
-<dt>@asis in table in table item</dt>
+<dt>in table in table item</dt>
 <dd><p><code>   in nested table line
    </code></p></dd>
 </dl></dt>
@@ -71,7 +71,7 @@ ul.toc {list-style: none}
 </p>
 <table><tr><td>&nbsp;</td><td><dl compact="compact">
 <dt><tt>item in preformatted <dl compact="compact">
-<dt><tt>@asis in table in table item in preformatted</tt></dt>
+<dt><tt>in table in table item in preformatted</tt></dt>
 <dd><pre class="example">   in nested table line in preformatted
    </pre></dd>
 </dl></tt></dt>
@@ -85,7 +85,7 @@ ul.toc {list-style: none}
 </code></p><table><tr><td>&nbsp;</td><td><dl compact="compact">
 <dt><tt>item in preformatted <dl compact="compact">
 <dd><pre class="example"><code>   </code></pre></dd>
-<dt><tt>@asis in table in table item in preformatted</tt></dt>
+<dt><tt>in table in table item in preformatted</tt></dt>
 <dd><pre class="example"><code>   in nested table line in preformatted
    </code></pre></dd>
 </dl>
