@@ -1,3 +1,7 @@
+2009-04-03  Patrice Dumas  <dumas@centre-cired.fr>
+
+	* texi2html.pl: add a user hook for closed empty preformatted.
+
 2009-04-02  Patrice Dumas  <dumas@centre-cired.fr>
 
 	* texi2html.pl, texi2html.init, examples/: modify directly the 
